# cli

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
.github/: FUNDING.yml
docs/: BUILD.md
src/: main.rs
