[package]
name = "scorpion"
version = "0.1.3"
authors = ["Brett Wilcox <brett@scorpion.io>"]
edition = "2018"
description = "Command Line Interface for the scorpion.io project."
readme = "README.md"
homepage = "https://scorpion.io"
repository = "https://github.com/scorpion/cli/"
license-file = "LICENSE"
keywords = ["cli", "scorpion"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
