[package]
name = "scorpion"
version = "0.1.4"
authors = ["Brett Wilcox <brett@scorpion.io>"]
edition = "2018"
description = "Command Line Interface for the scorpion.io project."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://scorpion.io"
repository = "https://github.com/scorpion/cli/"
keywords = ["cli", "scorpion"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"